[package]
name = "cutting-edge-tech-test"
version = "0.1.0"
edition = "2021"

[lib]
name = "main"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
